--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,13 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-text-fill-color: #1f2ade;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
 }
